--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,21 @@
   text-align: center;
 }
 
+.Nav-bar {
+  background-color: #282c34;
+  color: #61dafb;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
