--- a/src/pages/Dark.css
+++ b/src/pages/Dark.css
@@ -4,26 +4,45 @@ body {
     background-size: cover;
 }
 
+h2 {
+    background-color: #4CAF50;
+}
+
 .center-column {
     text-align: center;
     float: left;
-    width: 40%;
+    width: 44%;
 }
 
 .left-column {
-    text-align: left;
     float: left;
-    width: 30%;
+    width: 28%;
 }
 
 .right-column {
-    text-align: right;
     float: left;
-    width: 30%;
+    width: 28%;
 }
 
 .shoe-image {
-    width: 230px;
+    width: 220px;
+    border: 2px solid #555;
+    margin: 0% 25%;
+    display: flex;
+}
+
+.top-div {
+    padding-top: 30px;
+}
+
+.soul-button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
 }
 
 #privacy-policy {
@@ -38,4 +57,18 @@ body {
 .small-input {
     height: 7px;
     font-size: 9px;
+}
+
+@media screen and (max-width: 1100px) {
+    .center-column {
+        width: 100%;
+    }
+
+    .left-column {
+        display: none;
+    }
+    
+    .right-column {
+        display: none;
+    }
 }
