Cart and checkout routes

--- a/src/pages/Dark.css
+++ b/src/pages/Dark.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../images/background-clouds.png");
+    background-image: url("../images/background-ocean.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
