--- a/src/pages/Light.css
+++ b/src/pages/Light.css
@@ -1,5 +1,9 @@
+h1 {
+    display: inline-block;
+}
+
 body {
-    background-image: url("../images/background-clouds.png");
+    background-image: url("../images/background-ocean.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
