--- a/src/components/Cart Button.css
+++ b/src/components/Cart Button.css
@@ -2,17 +2,16 @@
     display:inline-block;
     padding:0.46em 1.6em;
     border:0.1em solid #000000;
-    margin:0 0.2em 0.2em 0;
+    margin: 0px 20px;
     border-radius:0.12em;
     box-sizing: border-box;
     text-decoration:none;
     font-family:'Roboto',sans-serif;
-    font-weight:300;
+    font-weight:bold;
     color:#000000;
-    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
     background-color: blue;
     text-align:center;
-    font-size: 20px;
+    font-size: 22px;
     transition: all 0.15s;
 }
 
