--- a/src/components/Fish Item.css
+++ b/src/components/Fish Item.css
@@ -22,6 +22,11 @@
     font-size: 25px;
 }
 
+#image {
+    width: 250px;
+    height: 170px;
+}
+
 #description {
     font-weight: 500;
     font-size: 20px;
