Dark Version finished

--- a/src/pages/Dark/Dark.css
+++ b/src/pages/Dark/Dark.css
@@ -3,7 +3,7 @@ h1 {
 }
 
 body {
-    background-image: url("../images/background-ocean.jpg");
+    background-image: url("../../images/background-ocean.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
