--- a/src/pages/Light/LightCart.css
+++ b/src/pages/Light/LightCart.css
@@ -1,8 +1,8 @@
-#cart-list {
+#light-cart-list {
     list-style-position: inside;
 }
 
-#icon {
+#light-icon {
     display: inline-block;
     height: 50px;
     position: absolute;
@@ -15,51 +15,53 @@ ol {
     font-weight: bold;
 }
 
-#left-column {
+#light-left-column {
     float: left;
     margin: 0px 0px 0px 350px;
 }
 
-#right-column {
+#light-right-column {
     float: right;
     margin: 25px 200px 0px 0px;
 }
 
-#right-column h1 {
+#light-right-column h1 {
+    font-size: 32px;
     color: red;
     text-shadow: 3px 3px 0 black, 0.5px 3px 0 black, 3px 3px 0 black, 3px 3px 0 black;
 }
 
-#right-column h2 {
+#light-right-column h2 {
+    font-size: 24px;
     color: yellow;
     text-shadow: 3px 3px 0 black, 0.5px 3px 0 black, 3px 3px 0 black, 3px 3px 0 black;
 }
 
-#right-column label {
+#light-right-column label {
     font-size: 25px;
     text-shadow: -0.5px -0.5px 0 black, 0.5px -0.5px 0 black, -0.5px 0.5px 0 black, 0.5px 0.5px 0 black;
 }
 
-#checkout {
+#light-checkout {
     float: right;
 }
 
-#checkout label {
+#light-checkout label {
     font-size: 25px;
     text-shadow: -0.5px -0.5px 0 black, 0.5px -0.5px 0 black, -0.5px 0.5px 0 black, 0.5px 0.5px 0 black;
 }
 
-.terms-link {
+.light-terms-link {
     font-size: 25px;
 }
 
-#checkout-button {
+#light-checkout-button {
     font-size: 20px;
     margin-top: 25px;
     padding: 10px;
 }
 
-input[type="checkbox"] {
+.light-checkbox {
     width: 30px;
     height: 30px;
 }
