--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-body {
-  background-color: #ffffff;
-}
-
 .Nav-bar {
   background-color: #282c34;
   display: flex;
@@ -13,4 +9,17 @@ body {
 .Nav-element {
   padding: 3px 20px 7px 20px;
   color: #61dafb;
+}
+
+.dark-login {
+  background-image: url("./images/Super-Star.png");
+  width: 880px;
+  height: 880px;
+  border: 3px solid green;
+  margin: auto;
+  text-align: center;
+}
+
+.dark-game {
+
 }
