--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,21 @@
   margin: auto;
 }
 
-.dark-login-bonus {
-
+.dark-login-incantation {
+  width: 25%;
+  margin: auto;
+  font-size: 48px;
+  font-weight: bold;
+  font-style: italic;
   border: 3px solid black;
+  background-color: red;
+}
+
+.dark-checkbox {
+  
+}
+
+.submit-button {
+  background-color: green;
+  font-size: 24px;
 }
