Updated favorites modal, and laid out a few song components

--- a/src/components/FavoritesModal.css
+++ b/src/components/FavoritesModal.css
@@ -1,3 +1,7 @@
-#outline {
-    outline: 3px black solid;
+#favorites-parent {
+    display: inline;
+}
+
+#favorites-button {
+    font-size: 20px;
 }
